# sandman

./: .gitignore  README.md  __main__.py  build.bat  installer.iss  pyproject.toml  requirements.txt
.github/workflows/: build-android.yml  build-windows.yml  build.yml
android/: README.md  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sandman/android/: MainActivity.kt  SandmanApp.kt
android/app/src/main/java/com/sandman/android/data/: AppPreferences.kt
android/app/src/main/java/com/sandman/android/llm/: LlmClient.kt
android/app/src/main/java/com/sandman/android/model/: Models.kt
android/app/src/main/java/com/sandman/android/notifications/: NudgeNotifier.kt
android/app/src/main/java/com/sandman/android/receiver/: BootReceiver.kt  NotificationReceiver.kt
android/app/src/main/java/com/sandman/android/service/: NudgeService.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: file_paths.xml
sandman/: config.py  llm.py  main.py  monitor.py  notifications.py  settings.py  sleep_detect.py  tray.py
tests/: test_activity_watch.py  test_config.py  test_llm.py  test_monitor.py  test_sleep_detect.py
windows/: README.md  __init__.py  __main__.py  activity_watch.py  build.bat  config.py  installer.iss  llm.py  main.py  monitor.py  notifications.py  settings.py  tray.py
windows/tests/: test_activity_watch.py  test_config.py  test_llm.py  test_monitor.py  test_sleep_detect.py
(+6 files in other folders)
